--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -112,13 +112,13 @@ Co-Chair, Public Plant Pathologist:  John Rupe, Univ. of Arkansas</p>
 	<tr><td>8:05</td><td>8:10</td><td>Andrew Scaboo, Univ. of Missouri</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Soybean_Genetics_Committee.pdf">Genetics Committee Report</a></td></tr>
 	<tr><td>8:10</td><td>8:15</td><td>Silvia Cianzio, Iowa State Univ.</td><td>Germplasm Committee Report</td></tr>
 	<tr><td>8:15</td><td>8:20</td><td>Kristin Bilyeu, USDA-ARS</td><td>SoyGEC Report</td></tr>
-	<tr><td>8:20</td><td>8:40</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Grant.pdf">David Grant, Iowa State Univ.</a></td><td>SoyBase Update</td></tr>
+	<tr><td>8:20</td><td>8:40</td><td>David Grant, USDA-ARS</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Grant.pdf">SoyBase Update</a></td></tr>
 	<tr><td>8:40</td><td>8:55</td><td>From the Floor</td><td>Retirements and Announcements</td></tr>
-	<tr><td>8:55</td><td>9:10</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Li_v2.pdf">Ling Li, Iowa State Univ.</a></td><td>A molecular tool to increase protein content and broad disease resistance in soybeans</td></tr>
-	<tr><td>9:10</td><td>9:25</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Xavier.pdf">Alencar Xavier, Purdue Univ.</a></td><td>Learning from data: GxE analysis on multiple populations</td></tr>
+	<tr><td>8:55</td><td>9:10</td><td>Ling Li, Iowa State Univ.</a></td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Li_v2.pdf">A molecular tool to increase protein content and broad disease resistance in soybeans</a></td></tr>
+	<tr><td>9:10</td><td>9:25</td><td>Alencar Xavier, Purdue Univ.</a></td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Xavier.pdf">Learning from data: GxE analysis on multiple populations</a></td></tr>
 	<tr><td>9:25</td><td>9:40</td><td>Justin Vaughn, Univ. of Georgia</td><td>Genomic signatures of North American soybean improvement</td></tr>
 	<tr><td>9:40</td><td>10:10</td><td>Henry Nguyen, Univ. of Missouri</td><td>The 1000+ soybean genomes and beyond</td></tr>
-	<tr><td>10:10</td><td>10:40</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Nelson.pdf">Randall Nelson, USDA-ARS</a></td><td>USAID Soybean Innovation Lab:  Increasing soybean production in sub-Saharan Africa</td></tr>
+	<tr><td>10:10</td><td>10:40</td><td>Randall Nelson, USDA-ARS</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/Nelson.pdf">USAID Soybean Innovation Lab:  Increasing soybean production in sub-Saharan Africa</a></td></tr>
 	<tr><td>10:45</td><td>10:45</td><td colspan='2'>Andrew Scaboo, Univ. of Missouri - Adjourn</td></tr>
 </body>
 </table>
@@ -166,19 +166,19 @@ USB Composition Workshop, Kelly Whiting | 11:00 am - 11:00 am Thursday Feb. 25th
         </tr>
     </thead>
 <tbody>
-	<tr><td>11:00 am</td><td>11:05 am</td><td>Welcome and Introduction to Session </td><td> Mark Leitman, USB staff</td></tr>
-	<tr><td>11:05 am</td><td>11:35 am</td><td> John Brake, North Carolina State University</td><td>Update on development of a tool for carbohydrate breeding: Sucrose content index relative to metabolizable energy content of animal feed </td></tr> 
-	<tr><td>11:35 am</td><td>12:00 pm</td><td> Zenglu Li, University of Georgia</td><td>Prospect of simultaneous genetic gains in yield and protein content in soybean </td></tr>
+	<tr><td>11:00am</td><td>11:05am</td><td> Mark Leitman, USB staff</td><td>Welcome and Introduction to Session</td></tr>
+	<tr><td>11:05am</td><td>11:35am</td><td> John Brake, North Carolina State University</td><td>Update on development of a tool for carbohydrate breeding: Sucrose content index relative to metabolizable energy content of animal feed</td></tr> 
+	<tr><td>11:35am</td><td>12:00pm</td><td> Zenglu Li, University of Georgia</td><td>Prospect of simultaneous genetic gains in yield and protein content in soybean </td></tr>
 
-	<tr><td>12:00 pm</td><td>1:20 pm</td><td>Lunch (on your own)</td></tr>
+	<tr><td>12:00pm</td><td>1:20pm</td><td colspan='2'>Lunch (on your own)</td></tr>
 
-	<tr><td>1:20 pm</td><td>2:20 pm</td><td></td><td>USB Carbohydrate Traits project update</td></tr>
-	<tr><td>2:20 pm</td><td>3:20 pm</td><td></td><td>USB Increased Oil Content project update</td></tr>
-	<tr><td>3:20 pm</td><td>3:40 pm</td><td>Break</td></tr>
-	<tr><td>3:40 pm</td><td>4:40 pm</td><td></td><td>USB Increased Protein Content and Amino Acids project update</td></tr>
-	<tr><td>4:40 pm</td><td>5:40 pm</td><td></td><td>USB Stearic Acid project update</td></tr>
+	<tr><td>1:20pm</td><td>2:20pm</td><td colspan='2'>USB Carbohydrate Traits project update</td></tr>
+	<tr><td>2:20pm</td><td>3:20pm</td><td colspan='2'>USB Increased Oil Content project update</td></tr>
+	<tr><td>3:20pm</td><td>3:40pm</td><td colspan='2'>Break</td></tr>
+	<tr><td>3:40pm</td><td>4:40pm</td><td colspan='2'>USB Increased Protein Content and Amino Acids project update</td></tr>
+	<tr><td>4:40pm</td><td>5:40 pm</td><td colspan='2'>USB Stearic Acid project update</td></tr>
 
-	<tr><td>6:15 pm</td><td></td></td><td>Zermatt Room</td><td>Dinner for USB composition project researchers (only) <div>(Please inform if a vegetarian meal is requested)</div></td></tr><br />
+	<tr><td>6:15pm</td><td> </td><td colspan='2'>Dinner for USB composition project researchers (only)</td></tr><br />
 				
 </tbody>
 </table>
@@ -193,11 +193,11 @@ USB Composition Workshop, Kelly Whiting | 11:00 am - 11:00 am Thursday Feb. 25th
         </tr>
     </thead>
 <tbody>
-	<tr><td>8:00</td><td>8:05 am</td><td>Kelly Whiting, USB staff</td><td>Welcome &amp; Introduction to Session </td></tr>
-	<tr><td>8:05</td><td>9:05 am</td><td>USB High Oleic Breeding project update</td><td></td></tr>
-	<tr><td>9:05</td><td>9:50 am</td><td>Chris Schroeder, Centrec Consulting Group, LLC</td><td>Market Considerations for Extracting Value from Soybean Compositional Enhancement</td></tr>
-	<tr><td>9:50</td><td>10:10 am</td><td>Break</td></tr>
-	<tr><td>10:10</td><td>10:25 am</td><td>Dan Corcoran, USB Farmer-Director</td><td>Update on USB Value Task Force</td></tr>	
-	<tr><td>10:25</td><td>11:00 am</td><td>Gordon Denny, Consultant, Denny LLC</td><td>What Will it Take to Introduce into the Market Soybean Meal Derived from Varieties with Improved Meal Traits</td></tr>
+	<tr><td>8:00am</td><td>8:05am</td><td>Kelly Whiting, USB staff</td><td>Welcome &amp; Introduction to Session </td></tr>
+	<tr><td>8:05am</td><td>9:05am</td><td colspan='2'>USB High Oleic Breeding project update</td></tr>
+	<tr><td>9:05am</td><td>9:50am</td><td>Chris Schroeder, Centrec Consulting Group, LLC</td><td>Market Considerations for Extracting Value from Soybean Compositional Enhancement</td></tr>
+	<tr><td>9:50am</td><td>10:10am</td><td colspan='2'>Break</td></tr>
+	<tr><td>10:10am</td><td>10:25am</td><td>Dan Corcoran, USB Farmer-Director</td><td>Update on USB Value Task Force</td></tr>	
+	<tr><td>10:25am</td><td>11:00am</td><td>Gordon Denny, Consultant, Denny LLC</td><td>What Will it Take to Introduce into the Market Soybean Meal Derived from Varieties with Improved Meal Traits</td></tr>
 </tbody>
 </table>
