--- a/community/sbw/SBW/SBW_2012.html
+++ b/community/sbw/SBW/SBW_2012.html
@@ -1,42 +1,55 @@
 ---
 layout: default
-title: Soybean Breeders Workshop 
+title: 2012 Soybean Breeders Workshop - Presentations and Reports 
 sitemap: community/sbw
 ---
 
-			<div class ="top_bar">
-				<h2>2012 SOYBEAN BREEDERS/ENTOMOLOGISTS WORKSHOP</h2>
-        <hr >
-			</div>
-			<br>
-			<div class="head_link"><h3>Workshop Coordinatiors</h3></div>
-			<div class="setin">
-				Katy Martin Rainey (Public Breeder), Purdue Univ. - Overall planning and coordination<br>
-				Hari Ramasubramaniam (Plant Pathologist), Syngenta Seeds Inc. - Hotel arrangements<br>
-				Jerry Lubich, Pioneer Hi-Bred - website<br>
-				Andrea Cardinal, NC State Univ. - Program Chair, Tuesday General Session
-			</div>
-			<br>
-			<div class="head_link"><h3>Monday, February 27</h3></div>
-			<div class="setin">
-				Henry Nguyen, Univ. Missouri - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Nguyen.pdf">Large-scale Genome Re-sequencing</a><br>
-				Peter Morrell, Univ. Minnesota - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Morrell.pdf">Nextgen Pops, Genetic Load, and Other Advances and Applications in Crop Genomics</a><br>
-				Scott Sebastian, Pioneer Hi-Bred - Context Specific MAS<br>
-				Matt O'Neal, IA State Univ. - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal.pdf">Insect Pollinators in Soybeans</a><br>
-				Maria Ortega &amp; Wayne Parrott, Univ. Georgia - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Ortega.pdf">De-bugging Soybean: A Story of Nano-spears and QTLs</a><br>
-				M.A. Saghai Maroof, Virginia Tech - Overview of $9.2 million AFRI Phytophthora Project<br>
-				Rich Joost, Production Research Pgm. Director, USB/SmithBucklin - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Joost.pdf">Future Directions for United Soybean Board Breeding Funding</a><br>
-			</div>
-      <br>
-			<div class="head_link"><h3>Tuesday, February 28</h3></div>
-<!--			<div class="sub_link">Session I</div><br> -->
-			<div class="setin">
-				<u>Stink Bug</u>, Chair: Ames Herbert, Virginia Tech<br>
-				Galen dively, Univ. Maryland - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Dively.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a><br>
-				Ames Herbert, Virginia Tech - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Herbert.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a><br>
-				Jeff Davis, LA State Univ. - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Davis.pdf">Deep South: Redshouldered/redbanded Stink Bugs</a><br>
-			<br>
-				<u>Kudzu Bug</u>, Chair: Ames Herbert, Virginia Tech<br>
+<h2>2012 SOYBEAN BREEDERS/ENTOMOLOGISTS WORKSHOP</h2>
+<hr>
+
+<h3>Workshop Coordinatiors:</h3>
+<p><strong>Katy Martin Rainey</strong> (Public Breeder), Purdue Univ. - Overall planning and coordination<br>
+<strong>Hari Ramasubramaniam</strong> (Plant Pathologist), Syngenta Seeds Inc. - Hotel arrangements<br>
+<strong>Jerry Lubich</strong>, Pioneer Hi-Bred - website<br>
+<strong>Andrea Cardinal</strong>, NC State Univ. - Program Chair, Tuesday General Session
+			
+<h3>Monday, February 27</h3>
+	
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+<body>
+	<tr><td>Henry Nguyen, Univ. Missouri</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Nguyen.pdf">Large-scale Genome Re-sequencing</a></td></tr>
+	<tr><td>Peter Morrell, Univ. Minnesota</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Morrell.pdf">Nextgen Pops, Genetic Load, and Other Advances and Applications in Crop Genomics</a></td></tr>
+	<tr><td>Scott Sebastian, Pioneer Hi-Bred</td><td>Context Specific MAS</td></tr>
+	<tr><td>Matt O'Neal, IA State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/ONeal.pdf">Insect Pollinators in Soybeans</a></td></tr>
+	<tr><td>Maria Ortega &amp; Wayne Parrott, Univ. Georgia</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Ortega.pdf">De-bugging Soybean: A Story of Nano-spears and QTLs</a></td></tr>
+	<tr><td>M.A. Saghai Maroof, Virginia Tech</td><td>Overview of $9.2 million AFRI Phytophthora Project</td></tr>
+	<tr><td>Rich Joost, Production Research Pgm. Director, USB/SmithBucklin</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Joost.pdf">Future Directions for United Soybean Board Breeding Funding</a></td></tr>
+</body>
+</table>
+</div>
+
+<h3>Tuesday, February 28</h3></div>
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+    <thead>
+        <tr>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+<body>
+	<tr><th colspan='4'>Session I: Stick Bug | Chair: Ames Herbert, Virginia Tech </th></tr>
+	<tr><td>Galen dively, Univ. Maryland</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Dively.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a></td></tr>
+	<tr><td>Ames Herbert, Virginia Tech</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Herbert.pdf">Mid-Atlantic: Brown Marmorated Stink Bug</a></td></tr>
+	<tr><td>Jeff Davis, LA State Univ.</td><td><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Davis.pdf">Deep South: Redshouldered/redbanded Stink Bugs</a></td></tr>
+	<tr><th colspan='4'>Sesion II: Kudzu Bug | Chair: Ames Herbert, Virginia Tech</th></tr>
 				Phillip Roberts, Univ. Georgia - <a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/Roberts.pdf">Southeast: Kudzu Bug</a><br>
 				<ul class="uk-list uk-margin-small-left uk-margin-remove-vertical">
 					<li class="uk-margin-remove"><a href="https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2012/VID_20110930_143901.m4v">Video 1</a></li>
