--- a/community/sbw/SBW/SBW_2024.html
+++ b/community/sbw/SBW/SBW_2024.html
@@ -11,7 +11,6 @@ sitemap: community/sbw
 </div>
 
 <h3>Monday February 12th, 2024 | Room: Versailles 1</h3>
-
 <div class="uk-overflow-auto">
 <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
     <thead>
@@ -40,8 +39,125 @@ genotype-by-environment interaction modeling</td></tr>
 </table>
 </div>
 
+<h3>Tuesday February 13th, 2024 | Room: Versailles 1</h3>
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-shrink">Start</th>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+<body>
+  <tr><th colspan='3'>SESSION 3:  Updates in Soybean Entomology | Chair: Robert Koch, University of Minnesota</th></tr>
+  <tr><td>8:00 am</td><td>Robert Koch, Univ. of Minnesota</td><td>Introduction</td></tr>
+  <tr><td>8:05 am</td><td>Justin McMechan, Univ. of Nebraska</td><td>Soybean gall midge: Understanding a new and emerging pest of soybean in the Midwest</td></tr>
+  <tr><td>8:30 am</td><td>Robert Koch, Univ. of Minnesota</td><td>Biology and management of the soybean tentiform leafminer, a new pest of soybean</td></tr>
+  <tr><td>8:55 am</td><td>Jeff Davis, Louisiana State Univ.</td><td>Biology and management of stink bugs in soybean</td></tr>
+  <tr><td>9:20 am</td><td>Silvana Paula-Moraes, Univ. of Florida</td><td>Biology and management of caterpillar pests of soybean</td></tr>
+  <tr><td>9:45 am</td><td colspan='2'>Coffee Break</td></tr>
+  <tr><td>10:10 am</td><td>Maria Cramer, Univ. of Maryland</td><td>Slugs as pests and prey: Growing practices that impact slugs in soybeans</td></tr>
+  <tr><td>10:35 am</td><td>Raul Villanueva, Univ. of Kentucky</td><td>Comprehensive review of the management of <i>Dectes texanus</i> in soybeans</td></tr>
+  <tr><td>11:00 am</td><td>Ivair Valmorbida, Univ. of Missouri</td><td>Soybean aphid management: Is it becoming more complicated?</td></tr>
+  <tr><td>11:25 am</td><td colspan='2'>Lunch (On your own)</td></tr>
+  <tr><th colspan='3'>SESSION 4: Genetics of host plant resistance | Chair: Jamie O’Rourke, USDA-ARS</th></tr>
+  <tr><td>1:00 pm</td><td>Wayne Parrot, Univ. of Georgia</td><td>Identifying resistance QTL</td></tr>
+  <tr><td>1:25 pm</td><td>Dave Hyten, Univ. of Nebraska</td><td>Stemborer resistance</td></tr>
+  <tr><td>1:50 pm</td><td>Jeff Davis, Louisiana State Univ.</td><td>Host Plant Resistance to a Complex of Stink Bugs: Protecting Yield and Quality in Southern Soybean</td></tr>
+  <tr><td>2:15 pm</td><td>Gustavo MacIntosh, Iowa State Univ.</td><td>Understanding the molecular mechanisms of plant defense suppression deployed by soybean aphids</td></tr>
+  <tr><td>2:40 pm</td><td colspan='2'>Coffee Break</td></tr>
+  <tr><th colspan='3'>SESSION 4: Breeding for host plant resistance | Chair: Ben Fallen, UDSA-ARS</th></tr>
+  <tr><td>3:05 pm</td><td>George Graef, Univ. of Nebraska</td><td>Genetics of soybean host plant reaction to soybean gall midge infestation</td></tr>
+  <tr><td>3:30 pm</td><td>Zenglu Li, Univ. of Georgia</td><td>Breeding for insect resistance in soybean</td></tr>
+  <tr><td>3:55 pm</td><td>Molly Ryan, Corteva</td><td>Corteva insect native traits</td></tr>
+  <tr><td>4:20 pm</td><td colspan='2'>Poster Session & Social Hour<br><a href="/community/sbw/SBW/posters2024.html" target="_blank">2024 Poster Winners</a></td></tr>
+</body>
+</table>
+</div>
+
+<h3>Wednesday February 14th, 2024 | Room: Versailles 1</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-shrink">Start</th>
+            <th class="uk-table-expand">Speaker</th>
+            <th class="uk-table-expand">Topic</th>
+        </tr>
+    </thead>
+<body>
+  <tr><th colspan='3'>SESSION 6: Reports and Announcements | Chair: Aaron Lorenz, University of Minnesota</th></tr>
+  <tr><td>8:00 am</td><td>Cleiton Wartha, Corteva</td><td>Announcement of poster winners</td></tr>
+  <tr><td>8:10 am</td><td>Jamie O’Rourke, USDA-ARS</td><td>Soybean Genomics Executive Committee Report</td></tr>
+  <tr><td>8:25 am</td><td>Elroy Cober, AAFC</td><td>Soybean Genetics Committee Report</td></tr>
+  <tr><td>8:30 am</td><td>Rex Nelson, USDA-ARS</td><td>SoyBase.org Update</td></tr>
+  <tr><td>8:40 am</td><td>Ben Fallen, USDA-ARS</td><td>Soybean Germplasm Committee Report</td></tr>
+  <tr><td>8:55 am</td><td colspan='2'>From the floor: Recognitions, retirements, and announcements</td></tr>
+  <tr><th colspan='3'>SESSION 7: Lightning presentations | Chair: Aaron Lorenz, University of Minnesota</th></tr>
+  <tr><td>9:00 am</td><td colspan='2'>Volunteered presentations</td></tr>
+  <tr><td>10:00 am</td><td colspan='2'>Coffee Break</td></tr>
+  <tr><th colspan='3'>SESSION 8: Highlights from Seed Industry | Chair: Brittney Jones, Bayer Crop Science</th></tr>
+  <tr><td>10:15 am</td><td colspan='2'>Speaker TBD</td></tr>
+  <tr><td>10:15 am</td><td colspan='2'>Speaker TBD</td></tr>
+  <tr><td>10:15 am</td><td colspan='2'>Speaker TBD</td></tr>
+  <tr><td>11:30 am</td><td colspan='2'>Adjourn</td></tr>
+</body>
+</table>
+</div>
+
+<h2>2024 Soybean Breeders' Workshop - Special Meetings</h2>
+<hr >
+<h3>Monday, February 12th, 2024</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-shrink">Start</th>
+            <th class="uk-table-shrink">End</th>
+            <th class="uk-table-expand">Meeting</th>
+        </tr>
+    </thead>
+<body>
+  <tr><td>8:00 am</td><td>12:00 pm</td><td>Genomics prediction of GxE workshop</td></tr>
+  <tr><td>8:30 am</td><td>10:00 am</td><td>Soybean Germplasm Committee Meeting</td></tr>
+  <tr><td>9:00 am</td><td>10:30 am</td><td>SoyBase Workshop Meeting</td></tr>
+  <tr><td>10:00 am</td><td>12:00 pm</td><td>Soybean Genomics Executive Committee Meeting</td></tr>
+  <tr><td>1:00 pm</td><td>5:00 pm</td><td>Technicians Workshop</td></tr>
+  <tr><td>7:00 pm</td><td>8:00 pm</td><td>Soybean Genetics Committee</td></tr>
+</body>
+</table>
+</div>
+<h3>Tuesday, February 13th, 2024</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-shrink">Start</th>
+            <th class="uk-table-shrink">End</th>
+            <th class="uk-table-expand">Meeting</th>
+        </tr>
+    </thead>
+<body>
+  <tr><td>8:00 am</td><td>12:00 pm</td><td>Technicians Workshop</td></tr>
+  <tr><td>7:00 pm</td><td>7:30 pm</td><td>Uniform Regional Testing - North</td></tr>
+  <tr><td>7:00 pm</td><td>8:00 pm</td><td>Uniform Regional Testing - South</td></tr>
+  <tr><td>7:30 pm</td><td>8:00 pm</td><td>SCN Regional Testing</td></tr>
+</body>
+</table>
+</div>
+<h3>Wednesday, February 14th, 2024</h3>  
+<div class="uk-overflow-auto">
+<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-table-middle">
+    <thead>
+        <tr>
+            <th class="uk-table-shrink">Start</th>
+            <th class="uk-table-shrink">End</th>
+            <th class="uk-table-expand">Meeting</th>
+        </tr>
+    </thead>
+<body>
 
 
 
-  <h3>Tuesday February 13th, 2024 | Room: Versailles 1</h3>
   
